--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/styles.css" />
-    <title>My weather application</title>
+    <title>My weather forecast</title>
   </head>
   <body>
     <div class="weather-app">
@@ -48,7 +48,7 @@
         <p>
           This project was coded by
           <a href="#" target="_blank">Bongeka Tshomela</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href=""https://github.com/b0ng3ka/Forecast-/edit/main/index.html#L14C33target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
