--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <p>
           This project was coded by
           <a href="#" target="_blank">Bongeka Tshomela</a> and is
-          <a href=""https://github.com/b0ng3ka/Forecast-/edit/main/index.html#L14C33target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/b0ng3ka/Forecast-/edit/main/index.html#L51C91" target="_blank"> on GitHub</a> and
+          <a href="https://app.netlify.com/sites/pr0j3ct/deploys" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
