Updated Github link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/styles.css" />
-    <title>My weather forecast</title>
+    <title>My weather application</title>
   </head>
   <body>
     <div class="weather-app">
@@ -48,7 +48,7 @@
         <p>
           This project was coded by
           <a href="#" target="_blank">Bongeka Tshomela</a> and is
-          <a href="https://github.com/b0ng3ka/Forecast-/edit/main/index.html#L51C91" target="_blank"> on GitHub</a> and
+          <a href="https://github.com/b0ng3ka/Forecast-/edit/main/index.html#L51C91" target="_blank"> publicly available on GitHub</a> and
           <a href="https://app.netlify.com/sites/pr0j3ct/deploys" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
